--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,6 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    background-color: aquamarine;
 }
 
 .logo {
@@ -34,4 +32,32 @@ button {
     font-size: 14px;
     font-weight: bold;
     margin-right: 30px;
+}
+
+/* stili main */
+main{
+    background-color: hsl(159.84deg 100% 74.9%);
+    padding: 100px 0;
+}
+
+.container {
+    width: 60%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    background-color: azure;
+}
+
+/* stili generati su js */
+.square {
+    background-color: hsl(195.47deg 80.71% 38.63%);
+    width: calc(100% / 10);
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    border: 1px solid black;
 }
