--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,11 @@ main{
     font-size: 20px;
     border: 1px solid black;
 }
+
+/* stili footer */
+footer {
+    height: 70px;
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
