--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ main{
     border: 1px solid black;
 }
 
+.clicked {
+    background-color: rgb(0, 217, 250);
+}
+
 /* stili footer */
 footer {
     height: 70px;
